--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
   <version>1.0-SNAPSHOT</version>
   <name>organizer-zakupowy</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <java.version>1.8</java.version>
+  </properties>
   <build>
     <plugins>
       <plugin>
@@ -14,8 +17,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <!--<version>3.3</version>-->
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
     </plugins>
