--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,11 @@
       <artifactId>javase</artifactId>
       <version>3.3.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
     <dependency>
-      <groupId>com.googlecode.json-simple</groupId>
-      <artifactId>json-simple</artifactId>
-      <version>1.1.1</version>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.2</version>
     </dependency>
   </dependencies>
 </project>
