--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,10 +12,15 @@
     <name>organizer-zakupowy (wersja webowa)</name>
 
     <dependencies>
-        <dependency>
-            <groupId>com.infoshareacademy.czerwoni</groupId>
-            <artifactId>konsola</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <dependency>
+                <groupId>com.infoshareacademy.czerwoni</groupId>
+                <artifactId>konsola</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>javax</groupId>
+                <artifactId>javaee-api</artifactId>
+                <version>8.0</version>
         </dependency>
     </dependencies>
 
