--- a/konsola/pom.xml
+++ b/konsola/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.apache.logging.log4j</groupId>-->
+            <!--<artifactId>log4j-slf4j-impl</artifactId>-->
+            <!--<version>2.9.1</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 </project>
