--- a/konsola/src/main/resources/log4j2.properties
+++ b/konsola/src/main/resources/log4j2.properties
@@ -1,6 +1,12 @@
-appender.console.type = Console
-appender.console.name = MyConsole
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{HH:mm:ss} %level %logger - %msg%n
-rootLogger.level = debug
-rootLogger.appenderRef.stdout.ref = MyConsole
+# Define the root logger with appender file
+log4j.rootLogger = DEBUG, FILE
+
+# Define the file appender
+log4j.appender.FILE=org.apache.log4j.FileAppender
+log4j.appender.FILE.file=log/financialanalyser_${current.date}.log
+log4j.appender.FILE.ImmediateFlush=true
+log4j.appender.FILE.append=false
+
+# Define the layout for file appender
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} | %p | %m%n
