--- a/konsola/src/main/resources/log4j.properties
+++ b/konsola/src/main/resources/log4j.properties
@@ -3,9 +3,9 @@ log4j.rootLogger = DEBUG, FILE
 
 # Define the file appender
 log4j.appender.FILE=org.apache.log4j.FileAppender
-log4j.appender.FILE.file=log/financialanalyser_${current.date}.log
+log4j.appender.FILE.file=log/log.out
 log4j.appender.FILE.ImmediateFlush=true
-log4j.appender.FILE.append=false
+log4j.appender.FILE.Append=true
 
 # Define the layout for file appender
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
