--- a/web/pom.xml
+++ b/web/pom.xml
@@ -21,6 +21,7 @@
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>8.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -44,6 +45,11 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-security</artifactId>
+            <version>11.0.0.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -60,6 +66,16 @@
                         <clientInclude>com/infoshareacademy/dao/QuestionAnswerDao.class</clientInclude>
                         <clientInclude>com/infoshareacademy/dao/CategoryDao.class</clientInclude>
                     </clientIncludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>1.2.1.Final</version>
+                <configuration>
+                    <java-opts>
+                        <java-opt>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005</java-opt>
+                    </java-opts>
                 </configuration>
             </plugin>
         </plugins>
