--- a/konsola/pom.xml
+++ b/konsola/pom.xml
@@ -81,6 +81,12 @@
             <artifactId>log4j-core</artifactId>
             <version>2.9.1</version>
         </dependency>
+        <dependency>
+            <scope>provided</scope>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.12.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
