--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -5,9 +5,9 @@
          version="3.1">
   <display-name>What Do You Want</display-name>
   <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
@@ -17,9 +17,12 @@
     <web-resource-collection>
       <web-resource-name>HtmlAuth</web-resource-name>
       <description>application security constraints</description>
-      <url-pattern>/add-question.jsp</url-pattern>
+      <url-pattern>/add-question</url-pattern>
       <url-pattern>/admin-panel.jsp</url-pattern>
       <url-pattern>/add-answer.jsp</url-pattern>
+      <url-pattern>/add-answer.jsp</url-pattern>
+      <url-pattern>/show-all-question</url-pattern>
+
       <http-method>GET</http-method>
       <http-method>POST</http-method>
     </web-resource-collection>
