--- a/web/pom.xml
+++ b/web/pom.xml
@@ -22,6 +22,13 @@
                 <artifactId>javaee-api</artifactId>
                 <version>8.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
