--- a/web/pom.xml
+++ b/web/pom.xml
@@ -22,6 +22,11 @@
                 <artifactId>javaee-api</artifactId>
                 <version>8.0</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
             <groupId>commons-io</groupId>
