--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
       <artifactId>log4j-slf4j-impl</artifactId>
       <version>2.9.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-jdk14</artifactId>
+      <version>1.7.25</version>
+    </dependency>
 
     <dependency>
       <groupId>org.assertj</groupId>
