--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,22 @@
       <role-name>admin</role-name>
     </auth-constraint>
   </security-constraint>
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>UserAuth</web-resource-name>
+      <url-pattern>/show-all-question</url-pattern>
+      <url-pattern>/question.jsp</url-pattern>
+      <url-pattern>/questions</url-pattern>
+      <url-pattern>/file-upload.jsp</url-pattern>
+      <url-pattern>/phrase-finder.jsp</url-pattern>
+      <url-pattern>/allegro-categories</url-pattern>
+      <http-method>GET</http-method>
+      <http-method>POST</http-method>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>user</role-name>
+    </auth-constraint>
+  </security-constraint>
   <login-config>
     <auth-method>FORM</auth-method>
     <form-login-config>
@@ -45,6 +61,9 @@
   </login-config>
   <security-role>
     <role-name>admin</role-name>
+  </security-role>
+  <security-role>
+    <role-name>user</role-name>
   </security-role>
   <jsp-config>
     <jsp-property-group>
