--- a/web/pom.xml
+++ b/web/pom.xml
@@ -61,7 +61,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson2-provider</artifactId>
+            <version>3.1.4.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
