error handle done

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -75,5 +75,9 @@
     <error-code>403</error-code>
     <location>/forbidden.jsp</location>
   </error-page>
+  <error-page>
+    <error-code>500</error-code>
+    <location>/forbidden.jsp</location>
+  </error-page>
 
 </web-app>
