--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,11 +12,11 @@
     <name>organizer-zakupowy (wersja webowa)</name>
 
     <dependencies>
-            <dependency>
-                <groupId>com.infoshareacademy.czerwoni</groupId>
-                <artifactId>konsola</artifactId>
-                <version>1.0-SNAPSHOT</version>
-            </dependency>
+        <dependency>
+            <groupId>com.infoshareacademy.czerwoni</groupId>
+            <artifactId>konsola</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
@@ -50,7 +50,11 @@
             <artifactId>wildfly-security</artifactId>
             <version>11.0.0.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
             <groupId>commons-io</groupId>
