--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,10 @@ services:
     container_name: "wdyw_db_r"
     image: mysql:latest
     environment:
-        - MYSQL_R_DATABASE=wdyw_db_r
-        - MYSQL_R_USER=wdyw
-        - MYSQL_R_PASSWORD=wdyw
-        - MYSQL_R_ROOT_PASSWORD=root
+        - MYSQL_DATABASE=wdyw_db_r
+        - MYSQL_USER=wdyw
+        - MYSQL_PASSWORD=wdyw
+        - MYSQL_ROOT_PASSWORD=root
     ports:
         - 3308:3306
 
@@ -26,12 +26,12 @@ services:
     container_name: "jjdz4-webapp"
     build: .
     environment:
-      - MYSQL_URI=WDYW_DB:3306
+      - MYSQL_URI=wdyw_db:3306
       - MYSQL_DATABASE=wdyw_db
       - MYSQL_USER=wdyw
       - MYSQL_PASSWORD=wdyw
       - DATASOURCE_NAME=java:/WDYWDs
-      - MYSQL_R_URI=WDYW_DB_R:3306
+      - MYSQL_R_URI=wdyw_db_r:3306
       - MYSQL_R_DATABASE=wdyw_db_r
       - MYSQL_R_USER=wdyw
       - MYSQL_R_PASSWORD=wdyw
