--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ log/
 organizer-zakupowy.iml
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
-/konsola/log/log.out
+konsola/log/log.out
