--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,19 @@ services:
   wdyw_db:
     container_name: "wdyw_db"
     image: mysql:latest
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_general_ci #--init-connect='SET NAMES UTF8;' --innodb-flush-log-at-trx-commit=0
-#    command: mysqld --character-set-result=utf8
-#    command: mysqld --character-set-server=utf8
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_general_ci
+#    command: client --default-character-set=utf8
+#    command: mysqld --character-set-results=utf8
 #    command: mysqld --character-set-client=utf8
 #    command: mysqld --character-set-connection=utf8
+#--init-connect='SET NAMES UTF8;' --innodb-flush-log-at-trx-commit=0
     environment:
       - MYSQL_DATABASE=wdyw_db
       - MYSQL_USER=wdyw
       - MYSQL_PASSWORD=wdyw
       - MYSQL_ROOT_PASSWORD=root
     ports:
-      - 3307:3306
+      - 4162:3306
 
   wdyw_db_r:
     container_name: "wdyw_db_r"
@@ -25,7 +26,7 @@ services:
         - MYSQL_PASSWORD=wdyw
         - MYSQL_ROOT_PASSWORD=root
     ports:
-        - 3308:3306
+        - 4163:3306
 
   jjdz4-webapp:
     container_name: "jjdz4-webapp"
@@ -43,7 +44,7 @@ services:
       - DATASOURCE_R_NAME=java:/WDYWreportsDS
     ports:
       - 4160:8080
-      - 9991:9990
+      - 4161:9990
     depends_on:
       - wdyw_db
       - wdyw_db_r
