--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,8 @@
          version="3.1">
   <display-name>What Do You Want</display-name>
   <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
+      <welcome-file>init</welcome-file>
+      <!--<welcome-file>index.jsp</welcome-file>-->
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>default.html</welcome-file>
