--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
   wdyw_db:
     container_name: "wdyw_db"
     image: mysql:latest
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_general_ci
+#    command: mysqld --character-set-server=utf8 --collation-server=utf8_polish_ci --skip-character-set-client-handshake
+   # command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_general_ci
 #    command: mysqld --character-set-results=utf8
 #    command: mysqld --character-set-client=utf8
 #    command: mysqld --character-set-connection=utf8
@@ -19,6 +20,7 @@ services:
   wdyw_db_r:
     container_name: "wdyw_db_r"
     image: mysql:latest
+    command: mysqld --character-set-server=utf8 --collation-server=utf8_polish_ci --skip-character-set-client-handshake
     environment:
         - MYSQL_DATABASE=wdyw_db_r
         - MYSQL_USER=wdyw
